[package]
name = "nakamoto-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
crate-type = ["cdylib"]
name = "nakamotoffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
nakamoto-client = { version = "0.4.0", path = "../client" }
uniffi = "0.27.3"

[build-dependencies]
uniffi = { version = "0.27.3", features = ["build"] }
