[package]
name = "example"
version = "0.1.0"
edition = "2021"


# [[bin]]
# # This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
# name = "uniffi-bindgen"
# path = "uniffi-bindgen.rs"

[dependencies]
uniffi = "0.27.3"
[workspace]


# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
